css/main.css
/* ... */
#blog .content pre code,
#guide .content pre code{
  background-color: initial;
  border: none;
}

#blog .content a,
#guide .content a{
  color: #111;
  font-family: "expo-serif-pro";
  text-decoration: none;
}

#blog .content li,
#guide .content li{
  margin-bottom: 10px;
}

#guide .content li:last-of-type{
  margin-bottom: 40px;
}

#blog img,
#guide img{
  margin-top: 20px;
  max-width: 100%;
}

#blog img + em{
  margin: -5px 0 40px;
  display: block;
  color: #777;
  font-family: "rosario";
  font-size: 18px;
  font-style: italic;
  line-height: 30px;
}

#blog .share-excerpt{
  background-color: white;
  box-sizing: border-box;
  padding: 40px 100px;
  width: 100%;
}

#blog .share-this{
  border-top: 1px solid #ccc;
  color: #777;
  font-weight: bold;
  line-height: 1;
  padding-top: 10px;
  text-transform: uppercase;
}

#blog .share-links{
  margin-top: 10px;
}

#blog .share-links a{
  background-color: #f8f8f8;
  border: 1px solid #ccc;
  border-radius: 3px;
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.08);
  color: #777;
  display: inline-block;
  font-size: 12px;
  line-height: 23px;
  padding: 1px 8px 0 5px;
}

#blog .share-links a:hover{
  background-color: #fafafa;
  border: 1px solid #999;
}

#blog .share-links i{
  margin-right: 2px;
}

#blog .metadata{
  background-color: #eee;
  box-sizing: border-box; 
  padding: 5% 10%;
  width: 100%;
}

#blog .metadata .metadata-item{
  color: #777;
  display: inline-block;
  font-size: 18px;
  margin-right: 10px;
}

#blog .metadata .categories{
  text-transform: capitalize;
}

/* PAGINATION */

.pagination{
  background-color: #fff;
  height: 100px;
  margin-top: 100px;
  width: 100%;
}

.pagination-section{
  box-sizing: border-box;
  display: inline-block;
  line-height: 100px;
  text-align: center;
  width: 33%;
}

#blog .pagination-section a{
  border: none;
  color: #57a1d7;
}

#blog .pagination-section a:hover{
  border: none;
  color: #333;
}

/* PAGE NAV */

.pagenav{
  background-color: #fff;
  margin-top: 100px;
  width: 100%;
}

.pagenav-section{
  box-sizing: border-box;
  display: block;
  margin: 0 100px;
  padding: 40px 0;
  text-align: left;
}

.pagenav-section:last-of-type{
  border-top: 1px solid #eee;
}

.pagenav-title{
  color: #777;
  display: block;
  font-weight: bold;
  line-height: 2;
  padding-top: 10px;
  text-transform: uppercase;
}

#blog .pagenav-section a{
  border: none;
  color: #57a1d7;
  font-size: 18px;
  font-weight: bold;
}

#blog .pagenav-section a:hover{
  border: none;
  color: #333;
}


/* RESPONSIVE STYLES */

@media (max-width: 520px) {
	.logo {
		width: 70%;
	}
	#build b {
		display: none;
	}
	#build span {
		display: inline;
		font-size: 1.6em;
    line-height: 45px;
	}
	#slideshow{
		display: none;
	}
	nav #menu {
		display: block;
	}
	nav ul {
		display: none;
		padding: 0 0 10px 0;
		line-height: 40px;
	}
	nav ul li {
		display: block;
		padding-left: 15px;
		margin: 5px 10px;
	}
  nav a {
    display: inline-block;
    height: 100%;
    width: 100%;
  }
	.mini-portfolio {
		width: 100%;
		margin: 20px 0;
	}
	#trio article article {
		width: 95%;
		height: 100%;
		padding: 0;
	}
	#sidebar > div {
		width: 100%;
	}
	.ribbon{
		text-indent: 0;
		padding: 10px;
		line-height: 1.5em;
	}
	#sidebar h2 {
		display: block;
		width: 100% !important;
	}
	#build{
		line-height: 52px;
	}
	#contact > * {
		width: 100% !important;
	}
  
  #project .content,
  #blog .content,
  #guide .content  {
    padding: 40px 20px;
  }
  
  #blog .content code,
  #guide .content code {
    word-wrap: break-word;
  }
  
  #blog h1 {
    padding: 20px;
  }
  
  #project h1,
  #blog h1,
  #blog h1 a {
    line-height: 40px;
  }
  
  #guide-banner {
    padding: 20px;
  }
  
  #guide-banner h1 {
    line-height: 40px
  }

}
@media (max-width: 800px) {
	#build {
		width: auto;
		padding: 0 15px;
	}
	#build em, #contact form em {
		display: none;
	}
	input#name, input#email {
		width: 94%;
		margin-left: 0;
	}
	#trio > article {
		width: 100%;
		height: auto;
		border-bottom: 1px solid #DDDDDD;
    padding: 0 0 0 4%;
    margin-bottom: 0;
	}
	#trio article:after {
		border: none;
	}
	#trio p.more {
		position: relative;
		margin-top: 20px;
	}

	#trio article article p {

	}
	.axis-summary, #history {
		background-image: none;
		padding-bottom: 20px;
	}
	.axis-summary p {
		padding: 0 4% 0 4%;
	}
	.ribbon{
		font-size: 18px;
	}
	#slides li{
		position: static;
	}
	.project-image-summary{
		position: static;
		width: 96%;
		padding: 5px 2%;
	}
	#project-slideshow{
		height: auto;
	}
}
@media (min-width: 521px) and (max-width: 800px) {
	#trio article article {
		padding: 0 30% 0 0;
		width: 100%;
		height: 100%;
	}
	#trio article article.data {
		background: url(../images/charts.png) right top no-repeat;
	}
	#trio article article.design {
		background:url(../images/map.png) right top no-repeat;
	}
	#trio article article.code {
		background:url(../images/histogram.png) right top no-repeat;
	}
	#sidebar > div {
		width: 42%;
		margin: 0 4%;
		float: left;
	}
	.ribbon{
		text-indent: 4%;
	}
}
@media (min-width: 800px) and (max-width: 975px) {
	#sidebar > div {
		width: 30%;
		float: left;
		margin: 0 1.5%;
	}
}
@media (max-width: 975px) {

	#wrapper {
		width: 90%;
		margin: 0 auto;
	}
	#main-content {
		width: 100% !important;
		box-shadow: none;
	}
	#main-content:after {
		content: "";
		display: block;
		clear: both;
	}
	#slideshow{
		width: 100%;
	}
	#sidebar {
		width: 96%;
		float: none;
		padding: 0 2% 25px;
		background: #fff;
		clear: left;
		display: table;
	}
	#sidebar h2 {
		display: block;
		width: 104%;
		margin-left: -2%;
	}
	#sidebar:after {
		content: "";
		display: block;
		clear: both;
	}
	#project-summary{
		width: 100%;
		padding: 0;
		margin: 0;
		float: none;
	}
	#project-summary > *{
		padding: 0 40px;
	}
	#project-slideshow{
		margin: 0 auto;
		float: none;
		max-width: 100%;
	}
	#project-slideshow *{
		max-width: 100%;
	}
}

